File Browser - selected is not highlighted #49502

Closed
opened 2016-09-30 18:04:38 +02:00 by filip mond · 17 comments

System Information
OS X 10.11.6, NVIDIA GeForce GTX 780M 4096 MB

Blender Version
Broken: 2.78
Worked:

Short description of error
File Browser > Region > Listed Items are not highlighted when selected in “System” or “System Bookmarks”. Selected item is highlighted only in “Bookmarks” and “Recent”.

FileBrowser.gif

**System Information** OS X 10.11.6, NVIDIA GeForce GTX 780M 4096 MB **Blender Version** Broken: 2.78 Worked: **Short description of error** File Browser > Region > Listed Items are not highlighted when selected in “System” or “System Bookmarks”. Selected item is highlighted only in “Bookmarks” and “Recent”. ![FileBrowser.gif](https://archive.blender.org/developer/F371544/FileBrowser.gif)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @FilipMond

Added subscriber: @FilipMond
Member

Added subscribers: @JulianEisel, @mont29
Removed subscriber: @FilipMond

Added subscribers: @JulianEisel, @mont29 Removed subscriber: @FilipMond

Won’t be able to help much here, this is most likely due to those system shortcuts being stored in a 'mac-specific' path, while it gets expanded for filebrowser itself, so bookmark UIList cannot recognize path from browser… This needs some OSX guy to fix.

Won’t be able to help much here, this is most likely due to those system shortcuts being stored in a 'mac-specific' path, while it gets expanded for filebrowser itself, so bookmark UIList cannot recognize path from browser… This needs some OSX guy to fix.

This issue was referenced by ad23ee761b

This issue was referenced by ad23ee761bb729f013ffc1f5e32f032bded9dcd6

Added subscriber: @brecht

Added subscriber: @brecht
Brecht Van Lommel self-assigned this 2016-10-01 19:16:14 +02:00

It's just a trailing slash mismatch, will fix.

It's just a trailing slash mismatch, will fix.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Thank you for fix.
"System Bookmarks" works now, but "System" highlights only my disk (first one named with slash "/", others external or connected disks doesn't.

Aaron: I want to ask the same here - any reason to remove my subscription? Thank you for some details.

Thank you for fix. "System Bookmarks" works now, but **"System" highlights only my disk** (first one named with slash "/", others external or connected disks doesn't. Aaron: I want to ask the same here - any reason to remove my subscription? Thank you for some details.
Author

Added subscriber: @FilipMond

Added subscriber: @FilipMond

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

I imagine removing the subscription was by accident.

I imagine removing the subscription was by accident.
Author

I would think so, I just wasn't sure if I did something wrong (bad boy :) ) because Aaron unsubscribed me in my two last reports here :)

I would think so, I just wasn't sure if I did something wrong (bad boy :) ) because Aaron unsubscribed me in my two last reports here :)

Added subscriber: @Sergey

Added subscriber: @Sergey

@brecht, the report is marked as assigned to you. Are you looking into it?

@brecht, the report is marked as assigned to you. Are you looking into it?

This issue was referenced by dc95c31372

This issue was referenced by dc95c3137256e36314c9b1125f7b9f2f6e51ce78

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49502
No description provided.