Fix T49502: file browser on OS X not highlighting external drives.